--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "request-state",
   "version": "1.0.0",
   "description": "Helps maintaining request-state when using react-redux",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "jest",
     "compile": "babel src -d dist",
