--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "babel-jest": "^13.0.0",
     "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0"
+    "babel-preset-es2015": "^6.9.0",
+    "jest": "^13.0.0"
   },
   "dependencies": {
     "immutable": "^3.8.1"
